--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600|Share+Tech&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
@@ -1005,13 +1007,15 @@ body {
 }
 
 .blog-details blockquote::before, .blog-details .blockquote::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
   position: absolute;
-  content: '\201c';
+  content: '\f10d';
   left: 25px;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  font-size: 100px;
+  font-size: 50px;
   color: #FF2D55;
 }
 
